FM51 updated contract extension error message

--- a/app/views/facilities_management/standard_contract_questions/_contract_extensions.html.erb
+++ b/app/views/facilities_management/standard_contract_questions/_contract_extensions.html.erb
@@ -22,7 +22,7 @@
         <div id="fm-contract-yes-container" name="fm-extension-container" hidden>
           <div id="fm-extensions" class="govuk-details__text" >
             <div id="fm-extension-1-container">
-              <div id="fm-extension-1-error" hidden><span class="govuk-error-message">This field can not be empty</span></div>
+              <div id="fm-extension-1-error" hidden><span class="govuk-error-message">This field can not be empty and contracts, including extensions, must be 10 years or less</span></div>
               <input class="govuk-!-margin-bottom-0" id="fm-extension-1" name="fm-extension" type="number" placeholder="Extension 1"/>
             </div>
           </div>
