FM51 - Added place holders for estimated costs and TUPE

--- a/app/views/facilities_management/standard_contract_questions/standard_contract_questions.html.erb
+++ b/app/views/facilities_management/standard_contract_questions/standard_contract_questions.html.erb
@@ -6,6 +6,9 @@
       <%= render('facilities_management/standard_contract_questions/title_section') %>
       <%= render('facilities_management/standard_contract_questions/contract_length') %>
       <%= render('facilities_management/standard_contract_questions/contract_extensions') %>
+      <%= render('facilities_management/standard_contract_questions/estimated_contract_value') %>
+      <p></p>
+      <%= render('facilities_management/standard_contract_questions/tupe') %>
     </div>
   </div>
 </div>
