--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -278,19 +278,88 @@ body.js-enabled {
 
     }
 
-    .ccs-tag {
-        background-color: govuk-colour("grey-1"); 
-        color: govuk-colour("white"); 
-        padding: 0 govuk-spacing(1); 
-        margin-left: govuk-spacing(1); 
-        text-align: center; 
-    }
-
 }
 
 @media (max-width: 641px) {//mobile
     .ccs-at-search-results ul.ccs-at-results-list .ccs-at-results-list__providers div span span.ccs-font--wrap {
         display: inline; 
+    }
+}
+
+ul.ccs-list-bullet--sm { 
+    margin-left: govuk-spacing(1); //as design 
+    padding-bottom: govuk-spacing(4);
+
+    li {
+        font-size: 12px; 
+        padding-left: govuk-spacing(2); 
+
+        & > span {
+            @include govuk-font($size: 19, $weight: inherit);
+            
+        }
+    }
+}
+
+table.ccs-at-govuk-table--sm {
+    th {
+        @include govuk-font($size: 16, $weight: inherit);
+    }
+    td {/*@include govuk-font($size: 14, $weight: inherit); */
+        font-size: 15px; 
+        font-size: 0.9rem; 
+    }
+}
+
+.ccs-tag {
+    background-color: govuk-colour("grey-1"); 
+    color: govuk-colour("white"); 
+    padding: 0 govuk-spacing(1); 
+    text-align: center; 
+    margin-right: govuk-spacing(1); 
+}
+h1[class^="govuk-heading"], 
+h2[class^="govuk-heading"], 
+h3[class^="govuk-heading"] {
+    .ccs-tag {
+        display: inline-block;
+        vertical-align: middle; 
+        font-size: 1.1rem; 
+        margin-left: govuk-spacing(1); 
+    }
+}
+a.ccs-no-underline {
+    .ccs-tag {
+        margin-left: govuk-spacing(1); 
+    }
+} 
+
+.ccs-info-panel {
+    background-color: govuk-colour("grey-4"); 
+    padding: govuk-spacing(4) govuk-spacing(4) govuk-spacing(3) govuk-spacing(4); 
+
+    dl {
+        font-family: $govuk-font-family; 
+        @include govuk-font($size: 19, $weight: inherit); 
+
+        dt {
+            font-weight: bold; 
+            margin-top: govuk-spacing(3);
+        }
+
+        dt:first-child {
+            margin-top: 0;
+        }        
+
+        dd {
+            margin-inline-start: 0;
+            margin-left: 0; 
+
+            a {
+                overflow-wrap: break-word;
+                word-wrap: break-word;
+            }
+        }
     }
 }
 
@@ -307,7 +376,6 @@ body.js-enabled {
 #main-content {
     min-height: 370px; 
 }
-
 
 #cookie_banner {//ccs-no-print
     display: none; 
@@ -365,7 +433,7 @@ body.js-enabled {
 
 
 
-/* ccs global patterns start: currently here. */
+/* ccs global patterns start: currently here. **************************/
 table.ccs-govuk-table--style {
     .govuk-table__header, 
     .govuk-table__cell {
