--- a/app/views/facilities_management/standard_contract_questions/_tupe.html.erb
+++ b/app/views/facilities_management/standard_contract_questions/_tupe.html.erb
@@ -1,9 +1,9 @@
+<p></p>
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h2 class="govuk-heading-m govuk-!-margin-0">Is TUPE involved?</h2>
       <span class="govuk-caption-m govuk-!-margin-bottom-0">When a business changes owner, its employees may be protected under TUPE.</span>
-
     </legend>
   </fieldset>
   <details class="govuk-details">
@@ -13,20 +13,25 @@
     </span>
     </summary>
     <div class="govuk-details__text">
-      blurb goes here
+      In short, TUPE, the Transfer of Undertakings (Protection of Employment) protects the rights of employees when the
+      business or commercial
+      contract that they are working on changes to new ownership. It ensures that employees who find themselves
+      transferred to a new business,
+      retain exactly the same hours and rate of pay as they were contracted to with the old employer.
+      Find out <a href="https://www.gov.uk/transfers-takeovers" target="_blank">when TUPE applies</a>.
     </div>
   </details>
 </div>
 <div class="govuk-radios govuk-radios">
   <div class="govuk-radios__item">
-    <input class="govuk-radios__input" id="fm-contract-cost-yes" name="contract-cost-radio" type="radio" value="yes">
-    <label class="govuk-label govuk-radios__label" for="fm-contract-cost-yes">
+    <input class="govuk-radios__input" id="fm-contract-tupe-yes" name="contract-tupe-radio" type="radio" value="yes">
+    <label class="govuk-label govuk-radios__label" for="fm-contract-tupe-yes">
       Yes
     </label>
   </div>
   <div class="govuk-radios__item">
-    <input class="govuk-radios__input" id="fm-contract-cost-no" name="contract-cost-radio" type="radio" value="no">
-    <label class="govuk-label govuk-radios__label" for="fm-contract-cost-no">
+    <input class="govuk-radios__input" id="fm-contract-tupe-no" name="contract-tupe-radio" type="radio" value="no">
+    <label class="govuk-label govuk-radios__label" for="fm-contract-tupe-no">
       No
     </label>
   </div>
