FM51 - event handlers for estimated contract value and TUPE

--- a/app/views/facilities_management/standard_contract_questions/_estimated_contract_value.html.erb
+++ b/app/views/facilities_management/standard_contract_questions/_estimated_contract_value.html.erb
@@ -14,12 +14,10 @@
       Yes
     </label>
     <div id="fm-contract-cost-container" name="fm-contract-cost-container" hidden>
-      <div id="fm-contract-cost-1-container">
-        <div hidden>
-          <span class="govuk-error-message">This field can not be empty and contracts, including extensions, must be 10 years or less</span>
-        </div>
-        <input class="" id="fm-contract-cost" name="fm-contract-cost" type="number" placeholder="£"/>
+      <div hidden>
+        <span class="govuk-error-message">This field can not be empty and contracts, including extensions, must be 10 years or less</span>
       </div>
+      <span class="govuk-!-font-size-16">£ </span><input class="" id="fm-contract-cost" name="fm-contract-cost" type="number"/>
     </div>
   </div>
   <div class="govuk-radios__item">
