--- a/app/views/facilities_management/standard_contract_questions/_tupe.html.erb
+++ b/app/views/facilities_management/standard_contract_questions/_tupe.html.erb
@@ -4,6 +4,7 @@
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h2 class="govuk-heading-m govuk-!-margin-0">Is TUPE involved?</h2>
       <span class="govuk-caption-m govuk-!-margin-bottom-0">When a business changes owner, its employees may be protected under TUPE.</span>
+      <span class="govuk-caption-m govuk-!-margin-bottom-0">For example, a cleaner is employed by a company that decides to use an outside cleaning company instead. They're likely to be protected under TUPE.</span>
     </legend>
   </fieldset>
   <details class="govuk-details">
