--- a/app/views/apprenticeships/home/training_details.html.erb
+++ b/app/views/apprenticeships/home/training_details.html.erb
@@ -43,19 +43,21 @@
           </p>
 
           <table class="govuk-table ccs-at-govuk-table--sm">
-            <caption class="govuk-table__caption ccs-at-remove"><%= t('.provider_information_title') %></caption>
+            <caption class="govuk-table__caption ccs-at-remove">
+              <%= t('.provider_information_summary') %>
+            </caption>
 
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
-                <th class="govuk-table__header" scope="row"><%= t('.overall_ofsted_rating') %></th>
+                <th class="govuk-table__header" scope="row"><%= t('.overall_ofsted_rating_tbl') %></th>
                 <td class="govuk-table__cell">1 - Outstanding (<a href="#">view report</a>)</td>
               </tr>
               <tr class="govuk-table__row">
-                <th class="govuk-table__header" scope="row"><%= t('.experience_in_delivering_apprenticeships') %></th>
+                <th class="govuk-table__header" scope="row"><%= t('.experience_in_delivering_apprenticeships_tbl') %></th>
                 <td class="govuk-table__cell">Yes</td>
               </tr>
               <tr class="govuk-table__row">
-                <th class="govuk-table__header" scope="row"><%= t('.recruitment_support') %></th>
+                <th class="govuk-table__header" scope="row"><%= t('.recruitment_support_tbl') %></th>
                 <td class="govuk-table__cell">Yes</td>
               </tr>
             </tbody>
@@ -87,34 +89,127 @@
         </section>
 
         <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="training">
-          <h2 class="govuk-heading-l">Past week</h2>
-          <table class="govuk-table">
-            <thead class="govuk-table__head">
-              <tr class="govuk-table__row">
-                <th class="govuk-table__header" scope="col">Case manager</th>
-                <th class="govuk-table__header" scope="col">Cases opened</th>
-                <th class="govuk-table__header" scope="col">Cases closed</th>
-              </tr>
-            </thead>
+          <h2 class="govuk-heading-l"><%= t('.training_course_information_title') %></h2>
+
+          <table class="govuk-table ccs-at-govuk-table--sm">
+            <caption class="govuk-table__caption ccs-at-remove">
+              <%= t('.training_course_information_summary') %>
+            </caption>
+
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
-                <td class="govuk-table__cell">David Francis</td>
-                <td class="govuk-table__cell">24</td>
-                <td class="govuk-table__cell">18</td>
+                <th class="govuk-table__header" scope="row"><%= t('.apprenticeship_tbl') %></th>
+                <td class="govuk-table__cell">1 - Outstanding (<a href="#">view report</a>)</td>
               </tr>
               <tr class="govuk-table__row">
-                <td class="govuk-table__cell">Paul Farmer</td>
-                <td class="govuk-table__cell">16</td>
-                <td class="govuk-table__cell">20</td>
+                <th class="govuk-table__header" scope="row"><%= t('.ofsted_rating_for_apprenticeships_tbl') %></th>
+                <td class="govuk-table__cell">Yes</td>
               </tr>
               <tr class="govuk-table__row">
-                <td class="govuk-table__cell">Rita Patel</td>
-                <td class="govuk-table__cell">24</td>
-                <td class="govuk-table__cell">27</td>
+                <th class="govuk-table__header" scope="row"><%= t('.level_tbl') %></th>
+                <td class="govuk-table__cell">Yes</td>
               </tr>
+              <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row"><%= t('.duration_tbl') %></th>
+                <td class="govuk-table__cell">Yes</td>
+              </tr> 
+              <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row"><%= t('.maximum_funding_tbl') %></th>
+                <td class="govuk-table__cell">Yes</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row"><%= t('.ability_to_customise_tbl') %></th>
+                <td class="govuk-table__cell">Yes</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row"><%= t('.experience_in_this_apprenticeship_tbl') %></th>
+                <td class="govuk-table__cell">Yes</td>
+              </tr>                                         
             </tbody>
-          </table>
+          </table>  
 
+          <h3 class="govuk-heading-m"><%= t('.about_the_apprenticeship_title') %></h3>
+
+          <p class="govuk-body">This professionally accredited course aims to equip you with the knowledge, technical and practial skills and techniquies required for a successful career as a building services engineer, able to respond to environmental and ethical considerations, while taking into consideration relevant social and economic implications too.</p>
+
+          <p class="govuk-body">ABC Traning LTD has a long and prestigious engineering heirtage and is ranked 2nd for 'Mechanical Engineering', 10th for 'Civil Engineering' and 30th for 'Electronic and Electrical Engineering' by the Guardian University Guide 2018. We enjoy a strong portfolio of industry-related research, particularly in the areas of low carbon buildling technology, sustainable construction materials and engineering education.</p>
+
+          <ul class="ccs-checklist govuk-clearfix">
+            <li><b>Time demand: </b>
+              
+              <ul>
+                <li><span class="ccs-y">Yes:</span> day release</li>
+                <li><span class="ccs-y">Yes:</span> block release</li>
+                <li><span class="ccs-n">No:</span> at your location</li>
+                <li>
+                  <details class="govuk-details">
+                    <summary class="govuk-details__summary">
+                      <span class="govuk-details__summary-text">
+                        Explain time demand
+                      </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                      Lorem ipsum consectetur adipiscing elit sit.
+                    </div>
+                  </details>                
+                </li>
+              </ul>
+
+            </li>
+            <li><b>Delivery method: </b>
+              
+              <ul>
+                <li><span class="ccs-y">Yes:</span> Classroom based</li>
+                <li><span class="ccs-y">Yes:</span> Online</li>
+                <li><span class="ccs-n">No:</span> Workplace based</li>
+                <li><span class="ccs-y">Yes:</span> Blended</li>
+              </ul>
+              
+            </li>
+            <li><b>Classroom sharing: </b>
+              
+              <ul>
+                <li><span class="ccs-n">No:</span> Open</li>
+                <li><span class="ccs-y">Yes:</span> Closed</li>
+                <li><span class="ccs-n">No:</span> Public</li>
+                <li>
+                  <details class="govuk-details">
+                    <summary class="govuk-details__summary">
+                      <span class="govuk-details__summary-text">
+                        Explain classroom sharing
+                      </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                      Lorem ipsum consectetur adipiscing elit sit.
+                    </div>
+                  </details>                
+                </li>
+              </ul>
+              
+            </li> 
+            <li><b>Training availability: </b>
+              
+              <ul>
+                <li><span class="ccs-n">No:</span> Open</li>
+                <li><span class="ccs-y">Yes:</span> Closed</li>
+                <li><span class="ccs-n">No:</span> Public</li>
+                <li>
+                  <details class="govuk-details">
+                    <summary class="govuk-details__summary">
+                      <span class="govuk-details__summary-text">
+                        Explain traiing availability
+                      </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                      Lorem ipsum consectetur adipiscing elit sit.
+                    </div>
+                  </details>                
+                </li>
+              </ul>
+              
+            </li>                       
+          </ul>
+          
         </section>
       </div>
 
