--- a/app/views/layouts/_header-banner.html.erb
+++ b/app/views/layouts/_header-banner.html.erb
@@ -14,7 +14,7 @@
           <% else %>
            <%= link_to_service_start_page %>
             <nav>
-              <ul id="navigation" class="govuk-header__navigation " aria-label="Top Level Navigation">
+              <ul id="navigation" class="govuk-header__navigation ccs-navigation--signin" aria-label="Top Level Navigation">
                 <% if logged_in? %>
                   <li class="govuk-header__navigation-item">
                     <%= link_to 'Back to start', service_start_page_path, class: 'govuk-header__link' %>
