HTML/CSS/JS AT-73 and AT-74 ready for review

--- a/app/views/apprenticeships/home/training_details.html.erb
+++ b/app/views/apprenticeships/home/training_details.html.erb
@@ -135,7 +135,7 @@
           <p class="govuk-body">ABC Traning LTD has a long and prestigious engineering heirtage and is ranked 2nd for 'Mechanical Engineering', 10th for 'Civil Engineering' and 30th for 'Electronic and Electrical Engineering' by the Guardian University Guide 2018. We enjoy a strong portfolio of industry-related research, particularly in the areas of low carbon buildling technology, sustainable construction materials and engineering education.</p>
 
           <ul class="ccs-checklist govuk-clearfix">
-            <li><b>Time demand: </b>
+            <li><b><%= t('.time_demand_label') %>: </b>
               
               <ul>
                 <li><span class="ccs-y">Yes:</span> day release</li>
@@ -145,18 +145,18 @@
                   <details class="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Explain time demand
+                        <%= t('.explain_time_demand_title') %>
                       </span>
                     </summary>
                     <div class="govuk-details__text">
-                      Lorem ipsum consectetur adipiscing elit sit.
+                      <%= t('.time_demand_txt') %>
                     </div>
                   </details>                
                 </li>
               </ul>
 
             </li>
-            <li><b>Delivery method: </b>
+            <li><b><%= t('.delivery_method_label') %>: </b>
               
               <ul>
                 <li><span class="ccs-y">Yes:</span> Classroom based</li>
@@ -166,7 +166,7 @@
               </ul>
               
             </li>
-            <li><b>Classroom sharing: </b>
+            <li><b><%= t('.classroom_sharing_label') %>: </b>
               
               <ul>
                 <li><span class="ccs-n">No:</span> Open</li>
@@ -176,18 +176,18 @@
                   <details class="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Explain classroom sharing
+                        <%= t('.explain_classroom_sharing_title') %>
                       </span>
                     </summary>
                     <div class="govuk-details__text">
-                      Lorem ipsum consectetur adipiscing elit sit.
+                      <%= t('.classroom_sharing_txt') %>
                     </div>
                   </details>                
                 </li>
               </ul>
               
             </li> 
-            <li><b>Training availability: </b>
+            <li><b><%= t('.training_availablity_label') %>: </b>
               
               <ul>
                 <li><span class="ccs-n">No:</span> Open</li>
@@ -197,11 +197,11 @@
                   <details class="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Explain traiing availability
+                        <%= t('.explain_training_availability_title') %>
                       </span>
                     </summary>
                     <div class="govuk-details__text">
-                      Lorem ipsum consectetur adipiscing elit sit.
+                      <%= t('.training_availability_txt') %>
                     </div>
                   </details>                
                 </li>
