Add pagination to Management Consultancy supplier results

--- a/app/views/management_consultancy/suppliers/index.html.erb
+++ b/app/views/management_consultancy/suppliers/index.html.erb
@@ -3,10 +3,11 @@
     <h1 class="govuk-heading-xl cmp-page-heading"><%= @lot.full_description %></h1>
     <p class="govuk-body">
       <%= t('.suppliers_found_html',
-            number: @suppliers.count,
-            suppliers: number_to_human(@suppliers.count, units: :companies, format: '%u')) %>
+            number: @all_suppliers.count,
+            suppliers: number_to_human(@all_suppliers.count, units: :companies, format: '%u')) %>
     </p>
     <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
     <%= render partial: 'supplier', collection: @suppliers, locals: { lot_number: @lot.number } %>
+    <%= paginate @suppliers, views_prefix: 'shared', window: 2, outer_window: 1 %>
   </div>
 </div>
