--- a/app/views/apprenticeships/home/sorry.html.erb
+++ b/app/views/apprenticeships/home/sorry.html.erb
@@ -14,7 +14,7 @@
 
 
      
-      <p style="width: 100%; text-align: right; margin: 80px 0 50px 0;"><small><i><a href="/apprenticeships/training_details">Temporary link to next page ></a></i></small></p>
+      <p style="width: 100%; text-align: right; margin: 80px 0 50px 0;"><small><i><a href="/apprenticeships/training_details">Temporary link to next page > (remove)</a></i></small></p>
 
     </div>
   </div>
