--- a/app/views/apprenticeships/home/training_details.html.erb
+++ b/app/views/apprenticeships/home/training_details.html.erb
@@ -213,6 +213,8 @@
         </section>
       </div>
 
+      <p style="width: 100%; text-align: right; margin: 80px 0 50px 0;"><small><i><a href="/apprenticeships/download_provider">Temporary link to next page > (remove)</a></i></small></p>
+
     </section>
 
     <section class="govuk-grid-column-one-third">
