added new ccs global scss file

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -38,4 +38,5 @@
 @import "supplier-record/supplier-record";
 @import "table/table";
 @import "tag/tag";
-@import "typography/typography";
+@import "typography/typography"; 
+@import "ccs-global/ccs-global";
