--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -39,4 +39,6 @@
 @import "table/table";
 @import "tag/tag";
 @import "typography/typography"; 
+
+/* CCS override and bespoke styles; re-used globally across all modules */
 @import "ccs-global/ccs-global";
