--- a/app/views/apprenticeships/home/download_provider.html.erb
+++ b/app/views/apprenticeships/home/download_provider.html.erb
@@ -42,8 +42,48 @@
 
     <p class="govuk-body">For audit purposes, please find below the list of choices and requiements that you have entered to generate this shortlist. Print this page, to keep a copy of this for your records.</p>
 
-    <p class="govuk-body"><a href="#" class="govuk-link govuk-link--no-visited-state">Print this page</a></p>
+    <p class="govuk-body">
+        <a href="javascript:window.print()" class="govuk-link govuk-link--no-visited-state ccs-print-icon ga-print-link">Print this page</a>
+    </p>
 
+    <h2 class="govuk-heading-m govuk-!-font-weight-bold">Requirements</h2>
+
+    <table class="govuk-table ccs-at-govuk-table--sm">
+        <caption class="govuk-table__caption ccs-at-remove">
+            Requirements summary
+        </caption>
+
+        <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row">Briefly outline the qualities you are looking for in a supplier</th>
+                <td class="govuk-table__cell">1 - Lorem ipsum ...</td>
+            </tr>
+            <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row">Experience in delivering apprenticeships</th>
+                <td class="govuk-table__cell">Yes</td>
+            </tr>
+            <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row">Recruitment support</th>
+                <td class="govuk-table__cell">Yes</td>
+            </tr>
+            <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row">Overall Ofsted rating</th>
+                <td class="govuk-table__cell">1 - Outstanding (<a href="#">view report</a>)</td>
+            </tr>
+            <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row">Experience in delivering apprenticeships</th>
+                <td class="govuk-table__cell">Yes</td>
+            </tr>
+            <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row">Recruitment support</th>
+                <td class="govuk-table__cell">Yes</td>
+            </tr> 
+            <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="row">Recruitment support</th>
+                <td class="govuk-table__cell">Yes</td>
+            </tr>                        
+        </tbody>
+    </table>
 
 
 
