--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -309,6 +309,22 @@ table.ccs-at-govuk-table--sm {
         font-size: 0.9rem; 
     }
 }
+table.ccs-at-govuk-table--5050 {//works on two col tables
+    tr th:first-child, 
+    tr td:first-child {
+        width: 50%; 
+        padding-right: govuk-spacing(2);
+    }
+}
+table.ccs-at-govuk-table--sm, 
+table.ccs-at-govuk-table--5050 {
+    th, td {
+        padding-top: govuk-spacing(3); 
+        padding-bottom: govuk-spacing(3); 
+        vertical-align: top; 
+    }
+}
+
 
 ul.ccs-checklist {
     list-style: none; 
