FM52 Add new address files

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require govuk-frontend
  *= require facilities_management/long_list
  *= require facilities_management/standard_contract_questions
+ *= require facilities_management/buildings
 
 /*! Copyright (c) 2011 by Margaret Calvert & Henrik Kubel. All rights reserved. The font has been customised for exclusive use on gov.uk. This cut is not commercially available. */
 
