--- a/app/assets/stylesheets/facilities_management/buildings.scss
+++ b/app/assets/stylesheets/facilities_management/buildings.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the facilities_management/buildings controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.fm-postcode-lookup-panel {
+  background-color: #e1e8e8;
+  border:1px black;
+  padding: 20px;
+}
