--- a/app/views/facilities_management/buildings/_building_list.html.erb
+++ b/app/views/facilities_management/buildings/_building_list.html.erb
@@ -3,5 +3,5 @@
 <h2 class="govuk-heading-m govuk-!-margin-0">0 buildings are on your list now</h2>
 <h2 class="govuk-caption-m govuk-!-margin-4">Browse the list of 0 building in total so far.</h2>
 
-<a id="fm-buildings-continue" href="#" class="govuk-button ccs-no-print" role="button">+ Add a building</a>
+<a id="fm-buildings-continue" href="buildings/new-building" class="govuk-button ccs-no-print" role="button">+ Add a building</a>
 </div>
