Change spacing on supplier results

--- a/app/views/management_consultancy/suppliers/index.html.erb
+++ b/app/views/management_consultancy/suppliers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-xl cmp-page-heading"><%= @lot.full_description %></h1>
+    <h1 class="govuk-heading-l cmp-page-heading"><%= @lot.full_description %></h1>
     <p class="govuk-body">
       <%= t('.suppliers_found_html',
             number: @suppliers.count,
